Project libary {
  databese_type: 'PostgreSQL'
}

Table libary.book as B {
  id uuid [PK, not null]
  title varchar [not null]
  gender varchar [not null]
  author varchar [not null]
  publication_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  created_by uuid [not null, ref: > U.id]
  updated_at timestamp [not null, default: `now()`]
  updated_by uuid [not null, ref: > U.id]
}

Table libary.specimens as S {
  id uuid [PK, not null]
  book_id uuid [not null, ref: > B.id]
  status libary.status [not null, default: `'AVAILABLE'`]
}

Enum libary.status {
  AVAILABLE
  LOANED
}

Table libary.loan as L {
  specimens_id uuid [not null, ref: > S.id]
  user_id uuid [not null, ref: > U.id]
  forecast_at timestamp [not null]
  returned_at timestamp
  status libary.status [not null, default: `'LOANED'`]
}

Table core.user as U {
  id uuid [PK, not null]
  name varchar [not null]
  email varchar [unique, not null]
  password varchar [not null]
  userRole core.role [not null]
}

Enum core.role {
  CLIENT
  ADMIN
}


